Fixed vertical alignment.

--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -321,6 +321,7 @@ mgt-tasks,
           }
 
           .TaskGroup {
+            min-height: 61px;
             grid-row: 1;
             -ms-grid-row: 1;
             grid-column: 2;
